# lsynth

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
examples/: example.ipynb  example.py  example.py~
local_examples/: HRSvar72.csv  HRSvar72_test.csv  Untitled.ipynb  create_LSM.ipynb  example.ipynb  example2-Copy1.ipynb  example2-Copy3.ipynb  example2.ipynb  example3.ipynb
local_examples/.ipynb_checkpoints/: example2-Copy2-checkpoint.ipynb  example2-Copy3-checkpoint.ipynb  example2-checkpoint.ipynb
local_examples/datasets/: variable104.csv  variable72.csv  year2020_2022.csv  year2021_2023.csv
lsynth/: __init__.py  core.py
lsynth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tex/: lsyn.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  preamble.tex
